@@ -143,7 +143,7 @@ void bind_session_settings()
         .def_readwrite("connections_limit", &session_settings::connections_limit)
         .def_readwrite("utp_target_delay", &session_settings::utp_target_delay)
         .def_readwrite("utp_gain_factor", &session_settings::utp_gain_factor)
-        .def_readwrite("utp_sun_resends", &session_settings::utp_syn_resends)
+        .def_readwrite("utp_syn_resends", &session_settings::utp_syn_resends)
         .def_readwrite("utp_fin_resends", &session_settings::utp_fin_resends)
         .def_readwrite("utp_num_resends", &session_settings::utp_num_resends)
         .def_readwrite("utp_connect_timeout", &session_settings::utp_connect_timeout)
