@@ -15,6 +15,7 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* make built-in sha functions not conflict with libcrypto
 	* improve web seed hash failure case
 	* improve DHT lookup times
 	* uTP path MTU discovery improvements
@@ -22,6 +23,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix typo in python settings binding
 	* fix possible dangling pointer use in peer list
 	* fix support for storing arbitrary data in the DHT
 	* fixed bug in uTP packet circle buffer
